FIX text overflow

--- a/src/components/Main/Content/ArticleItem.scss
+++ b/src/components/Main/Content/ArticleItem.scss
@@ -58,6 +58,7 @@
             text-align: left;
             white-space: pre-wrap;
             font-family: inherit;
+            overflow-wrap: break-word;
         }
     }
     .ArticleItem-detail-info {
